--- a/fastest-web/index.html
+++ b/fastest-web/index.html
@@ -16,8 +16,8 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="preload" href="css/normalize.css">
+  <link rel="preload" href="css/main.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -26,9 +26,9 @@
 
   <p>Hello world! This is fastest site</p>
 
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
+  <script src="js/vendor/modernizr-3.11.2.min.js" defer></script>
+  <script src="js/plugins.js" defer></script>
+  <script src="js/main.js" defer></script>
 
 </body>
 
