Add async load google font.

--- a/fastest-web/index.html
+++ b/fastest-web/index.html
@@ -24,7 +24,10 @@
   <noscript>
       <link rel="stylesheet" href="css/main.css">
   </noscript>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Sarabun&display=swap">
+  <link rel="preload" href="https://fonts.googleapis.com/css2?family=Sarabun&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Sarabun&display=swap">
+  </noscript>
 
   <meta name="theme-color" content="#fafafa">
 </head>
