Add very large image waiting to optimize.

--- a/fastest-web/index.html
+++ b/fastest-web/index.html
@@ -36,6 +36,8 @@
 
   <p>Hello world! This is fastest site ภาษาไทย</p>
 
+  <img src="img/michael-d-beckwith-CDOl9BL8Qic-unsplash.jpg" alt=" the choir inside Worcester Cathedral. Located in Worcester, Worcestershire, England. Photo by Michael D Beckwith on Unsplash">
+
   <script src="js/vendor/modernizr-3.11.2.min.js" defer></script>
   <script src="js/plugins.js" defer></script>
   <script src="js/main.js" defer></script>
