--- a/fastest-web/index.html
+++ b/fastest-web/index.html
@@ -7,13 +7,15 @@
   <meta name="description" content="This site try to be fastest site">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <meta name="theme-color" content="#fafafa">
   <meta property="og:title" content="">
   <meta property="og:type" content="">
   <meta property="og:url" content="">
   <meta property="og:image" content="">
 
+  <link rel="shortcut icon" type="image/png" href="img/icon@512x512.png"/>
   <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="apple-touch-icon" href="img/icon@512x512.png">
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="preload" href="css/normalize.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
@@ -29,7 +31,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Sarabun&display=swap">
   </noscript>
 
-  <meta name="theme-color" content="#fafafa">
 </head>
 
 <body>
