--- a/fastest-web/public/index.html
+++ b/fastest-web/public/index.html
@@ -4,7 +4,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <meta name="description" content="This site try to be fastest site">
+
+    <link rel="preconnect" href="https://storage.googleapis.com">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+
+    <link rel="preload" href="css/normalize.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+    <noscript>
+      <link rel="stylesheet" href="css/normalize.css">
+    </noscript>
+
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
